# makemore

./: .gitignore  .main.ipynb.swp  CLAUDE.md  Claude's Optimization of MLP.ipynb  LICENSE  MLP-makemore.ipynb  README.md  Untitled.ipynb  main.ipynb  pyproject.toml
GPT/: main.ipynb  main.py
makemore/: Untitled.ipynb  backprop-god.ipynb  main.ipynb
micrograd/: micrograd-part1.ipynb
