[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makemore"
version = "0.1.0"
description = "Following Andrej Karpathy's makemore series - character-level language modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "jupyter",
    "notebook>=7.3.3",
    "nbclassic>=1.2.0",
    "jupyter-console>=6.6.3",
    "numpy>=1.24.4",
    "matplotlib>=3.7.5",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["makemore"]
